Include doctests when measuring test coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: required
 language: rust
+rust:
+  - nightly
 addons:
   apt:
     packages:
@@ -8,7 +10,8 @@ cache:
   directories:
     - $HOME/.cargo
 before_install:
-  - rustup component add rustfmt
+  - rustup toolchain install stable
+  - rustup component add --toolchain stable rustfmt
 before_cache:
   - cargo install cargo-tarpaulin
   - rm -rf $HOME/.cargo/registry
@@ -16,6 +19,6 @@ script:
   - cargo clean
   - cargo build
   - cargo test
-  - cargo fmt -- --check
+  - cargo +stable fmt -- --check
 after_success:
-  - cargo tarpaulin --ciserver travis-ci --coveralls $TRAVIS_JOB_ID
+  - cargo tarpaulin --run-types Doctests Tests --ciserver travis-ci --coveralls $TRAVIS_JOB_ID
