--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
   directories:
     - $HOME/.cargo
 before_install:
-  - rustup component add rustfmt
+  - rustup component add rustfmt clippy
   - sudo apt install libsdl2-dev
 before_cache:
   - cargo install cargo-tarpaulin
@@ -18,5 +18,6 @@ script:
   - cargo build
   - cargo test
   - cargo fmt -- --check
+  - cargo clippy
 after_success:
   - cargo tarpaulin --ciserver travis-ci --coveralls $TRAVIS_JOB_ID
