Work around counterproductive crates.io publishing error
The error:

    error: api errors (status 200 OK): wildcard (`*`) dependency constraints are not allowed on crates.io. See https://doc.rust-lang.org/cargo/faq.html#can-libraries-use--as-a-version-for-their-dependencies for more information

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,5 @@ default-run = "openpol"
 travis-ci = { repository = "jstasiak/openpol" }
 
 [dependencies]
-flic = "*"
-sdl2 = "*"
+flic = ">0.0.0"
+sdl2 = ">0.0.0"
