--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,9 @@ travis-ci = { repository = "jstasiak/openpol" }
 
 [dependencies]
 flic = ">0.0.0"
-sdl2 = ">0.0.0"
+sdl2-sys = ">0.0.0"
+
+[dependencies.sdl2]
+version = ">0.0.0"
+default-features = false
+features = ["mixer"]
