Install SDL2_mixer development files in CI since we're using it

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
     - $HOME/.cargo
 before_install:
   - rustup component add rustfmt clippy
-  - sudo apt install libsdl2-dev
+  - sudo apt install libsdl2-dev libsdl2-mixer-dev
 before_cache:
   - cargo install cargo-tarpaulin
   - rm -rf $HOME/.cargo/registry
