--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,8 @@ sdl2-sys = ">0.0.0"
 
 [dependencies.sdl2]
 version = ">0.0.0"
+
+[dependencies.rodio]
+version = "^0.16.0"
+features = ["vorbis"]
 default-features = false
-features = ["mixer"]
