--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
         toolchain: ${{ matrix.version }}
         override: true
         components: rustfmt, llvm-tools-preview
+    - name: Install xmllint
+      run: sudo apt-get install -y libsdl2-dev libsdl2-mixer-dev
     - name: Clean
       run: cargo clean
     - name: Build
