Add some documentation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
       run: cargo build --verbose
       env:
         CARGO_INCREMENTAL: '0'
+        # TODO: see if these flags are needed if cargo test call below has them too
         RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests'
         RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests'
     - name: Test
@@ -38,6 +39,11 @@ jobs:
       env:
         # cargo test builds some things too so we need to add this flag here as well
         CARGO_INCREMENTAL: '0'
+        # TODO: see if the flags are ok. I had to remove -Cpanic=abort because:
+        #
+        # error: the linked panic runtime `panic_unwind` is not compiled with this crate's panic strategy `abort`
+        #
+        # error: could not compile `flic` due to previous error
         RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests'
         RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests'
     - name: Enforce formatting
