--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         override: true
         components: rustfmt, llvm-tools-preview
     - name: Install SDL
-      run: sudo apt-get install -y libsdl2-dev libsdl2-mixer-dev  
+      run: sudo apt-get update && apt-get install -y libsdl2-dev libsdl2-mixer-dev  
     - name: Clean
       run: cargo clean
     - name: Build
