--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ sdl2-sys = ">0.0.0"
 
 [dependencies.sdl2]
 version = ">0.0.0"
-features = ["bundled", "static-link"]
+features = ["bundled"]
 
 [dependencies.rodio]
 version = "^0.16.0"
