--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,8 @@ jobs:
       run: cargo clippy
     - id: coverage  
       uses: actions-rs/grcov@v0.1
-    - uses: codecov/codecov-action@v1
+    - uses: codecov/codecov-action@v3
       with:
         verbose: true
+    - name: test
+      run: echo ${{ steps.coverage.outputs.report }}
