--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,5 +55,4 @@ jobs:
     - uses: codecov/codecov-action@v3
       with:
         verbose: true
-    - name: test
-      run: echo ${{ steps.coverage.outputs.report }}
+        files: ${{ steps.coverage.outputs.report }}
